# Character-Foundry

./: .env.example  .gitignore  App.tsx  CHANGELOG.md  README.md  audio_modal.html  character_traits.json  full_context.md  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.py  pyproject.toml  repomix-output.md  tailwind.config.js  tsconfig.json  types.ts  vercel.json  vite.config.ts
api/gemini/: generate.py
api/imagen/: generate.py
api/memory/: index.py  search.py
api/tts/: edge.py  google.py  qwen.py
components/: AudioClipModal.tsx  Button.tsx  CharacterFields.tsx  CharacterForm.tsx  Dashboard.tsx  ErrorBoundary.tsx  FormInputs.tsx  GenerationOptionsModal.tsx  GenreSelect.tsx  Icons.tsx  ImportExportMenu.tsx  PlayButton.tsx  PortraitManager.tsx  QueryProvider.tsx  TagsInput.tsx  ThemeProvider.tsx  ThemeToggle.tsx  UploadButton.tsx  VersionHistory.tsx  VoiceManager.tsx
docs/: api-reference.md  architecture.md  audit-report.md  contributor-guide.md  foundation-cleanup-summary.md  issue-backlog.md  repo-verdict.md  salvage-pass-2-summary.md  salvage-plan.md  state-ownership.md  technical-overview.md
e2e/: character-flow.spec.ts
hooks/: useAI.ts  useLocalStorage.ts
playwright-report/: index.html
schemas/: validation.ts
scripts/: test-tts.ts
services/: geminiService.test.ts  geminiService.ts  memoryService.ts  ttsService.ts
store/: index.ts  settings.ts  store.test.ts  versioning.ts
the_character_foundry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+1 files in other folders)
