[project]
name = "the-character-foundry"
version = "0.0.0"
description = "The Character Foundry backend services"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "flask",
  "python-dotenv",
  "requests",
  "edge-tts",
  "chromadb>=1.5.5",
  "google-genai>=1.67.0",
  "qwen-tts>=0.1.1",
  "torch>=2.10.0",
  "soundfile>=0.13.1",
  "transformers>=4.57.3",
]

[tool.setuptools]
packages = ["api"]
py-modules = ["proxy"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
